Update About and fix mono editor caret spacing

--- a/mono/src/components/Editor.css
+++ b/mono/src/components/Editor.css
@@ -9,7 +9,7 @@
 
 .editor[contenteditable="true"] {
   min-height: 100%;
-  padding-bottom: var(--keyboard-offset, 0);
+  padding-bottom: calc(var(--keyboard-offset, 0px) + 24px);
 }
 
 .markdown-delimiter,
